Added mockito test of the servlet

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mockito-all-1.9.5.jar=libs/mockito-all-1.9.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mockito-all-1.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -50,7 +52,7 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${file.reference.mockito-all-1.9.5.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -71,7 +73,9 @@ platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.mockito-all-1.9.5.jar}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
