--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -23,7 +23,8 @@ display.browser=true
 dist.archive.excludes=
 dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
-dist.javadoc.dir=${dist.dir}/javadoc
+#dist.javadoc.dir=${dist.dir}/javadoc
+dist.javadoc.dir=docs
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
