--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,7 @@ javac.test.classpath=\
     ${file.reference.mockito-all-1.9.5.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-doclet ch.raffael.doclets.pegdown.PegdownDoclet -docletpath ${basedir}/libs/pegdown-doclet-1.3-all.jar -overview ${basedir}/overview.md
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
